--- a/results.yml
+++ b/results.yml
@@ -75,6 +75,42 @@ translations:
   - key: options.experience_ranking.awareness
     t: Awareness
 
+  - key: ratios.interest
+    aliasFor: options.experience_ranking.interest
+  - key: ratios.usage
+    aliasFor: options.experience_ranking.usage
+  - key: ratios.awareness
+    aliasFor: options.experience_ranking.awareness
+  - key: ratios.retention
+    t: Retention
+  - key: ratios.positivity
+    t: Positivity
+
+  - key: ratios.interest.description
+    t: >
+      Proportion of **positive sentiment** among respondents having **heard about** an item
+  - key: ratios.usage.description
+    t: >
+      Proportion of respondents **having used** an item
+  - key: ratios.awareness.description
+    t: >
+      Proportion of respondents **having heard about or used** an item
+  - key: ratios.retention.description
+    t: >
+      Proportion of **positive sentiment** among respondents having **used** an item
+  - key: ratios.positivity.description
+    t: >
+      Proportion of **positive sentiment** among all respondents
+
+  - key: modes.rank
+    t: Rank
+  - key: modes.value
+    t: Value
+  - key: modes.rank.description
+    t: Place according to rank
+  - key: modes.value.description
+    t: Place according to value
+
   - key: options.features_mode.grouped
     t: Grouped
   - key: options.features_mode.awareness_rank
@@ -243,16 +279,12 @@ translations:
   - key: user_info.locale
     t: Language
   - key: user_info.locale.description
-    t: What language did respondents select to fill out the survey?
-  - key: user_info.locale.note
-    t: >
-      This data is collected automatically based on respondent's settings while taking the survey; 
-      Languages with fewer than 20 respondents not shown.
+    t: The language respondents selected to fill out the survey
 
   - key: user_info.source
     t: Source
   - key: user_info.source.description
-    t: How did respondents find out about the survey?
+    t: How respondents found out about the survey
   - key: user_info.source.note
     t: Respondent source is computed based on referrer data, URL tracking data, and self-reported answers.
 
@@ -404,6 +436,12 @@ translations:
   # Tools & Methodologies
   ###########################################################################
 
+  - key: tools.all_items.experience
+    t: Libraries Experience & Sentiment
+
+  - key: tools.all_items.experience.short
+    aliasFor: tools.experience
+
   # general
   - key: tools.links
     t: Links
@@ -463,6 +501,10 @@ translations:
     t: npm
   - key: blocks.entity.youtube_link
     t: YouTube
+  - key: blocks.entity.mdn_link
+    t: MDN
+  - key: blocks.entity.caniuse_link
+    t: CanIUse
 
   # people
   - key: blocks.people.name
@@ -501,18 +543,20 @@ translations:
   # tools quadrant
   - key: blocks.tools_quadrant
     t: Retention vs Usage
+  - key: tools.scatterplot_overview
+    aliasFor: blocks.tools_quadrant
   - key: blocks.tools_quadrant.description
     t: |
       This chart shows each technology's **retention ratio** over its total **user count**.
       It can be divided into four quadrants:
 
-        - **ASSESS**: Low usage, high retention. Technologies worth keeping an eye on.
+        - **1**: Low usage, high retention. Technologies worth keeping an eye on.
 
-        - **ADOPT**: High usage, high retention. Safe technologies to adopt.
+        - **2**: High usage, high retention. Safe technologies to adopt.
 
-        - **AVOID**: Low usage, low retention. Technologies probably best avoided currently.
+        - **3**: Low usage, low retention. Technologies that are harder to recommend currently.
 
-        - **ANALYZE**: High usage, low retention. Reassess these technologies if you're currently using them.
+        - **4**: High usage, low retention. Reassess these technologies if you're currently using them.
 
   # category other tools
   - key: blocks.category_other_tools
@@ -653,9 +697,11 @@ translations:
     t: >
       You can copy paste this query into our <a target="_blank" rel="nofollow" href="https://graphiql.devographics.com/">public GraphQL API</a>.
   - key: export.export_json
-    t: Get JSON Data
+    t: JSON Data
   - key: export.export_graphql
-    t: Get GraphQL Query
+    t: GraphQL Query
+  - key: export.export_filters
+    t: Filters Code
 
   - key: custom_data.heading
     t: Custom Chart
@@ -722,25 +768,22 @@ translations:
 
   # other
   - key: blocks.freeform
-    t: (freeform question)
+    t: Freeform
 
   # Reading List
   - key: features.reading_list
     t: Reading List
-  - key: features.reading_list.description
-    t: How many respondents added each item to their reading list?
   - key: features.reading_list.note
     t: >
-      The “Reading List” feature lets respondents save items they want to learn more
-      about while taking the survey; and get a recap of useful resources about them at
-      the end of the survey.
+      How many time each item was added to respondent's Reading List, a feature that lets people
+      learn more about specific topics as they take the survey.
 
   ###########################################################################
   # Charts
   ###########################################################################
 
   - key: chart_units.respondents
-    t: "{count} question respondents ({percentage}% completion percentage)"
+    t: "**{count}** question respondents out of **{total}** survey participants (**{percentage}%** completion percentage)"
   - key: chart_units.percentage
     t: Percents
   - key: chart_units.count
@@ -754,13 +797,16 @@ translations:
   - key: chart_units.percentageSurvey
     aliasFor: chart_units.percentage_survey
   - key: chart_units.percentage_bucket
-    t: "% of bucket"
+    t: Percentages
   - key: chart_units.percentageBucket
     aliasFor: chart_units.percentage_bucket
   - key: chart_units.average
-    t: Average {axis}
+    t: Average
   - key: chart_units.averageByFacet
     aliasFor: chart_units.average
+
+  - key: chart_units.facetCounts
+    t: Counts
 
   - key: chart_units.percentilesByFacet
     t: Percentiles
@@ -769,10 +815,10 @@ translations:
     t: Average {axis}
   - key: charts.mean
     t: Mean
-  - key: charts.overall
-    t: Overall
   - key: charts.all_respondents
     t: All Respondents
+  - key: charts.overall
+    aliasFor: charts.all_respondents
   - key: charts.facet_responses
     t: "{count} responses"
   - key: charts.facet_respondents
@@ -783,7 +829,7 @@ translations:
   - key: charts.nth_percentile_value
     t: "{percentile}th percentile: {value}"
 
-  - key: charts.freeform_data
+  - key: charts.freeform_data_indicator
     t: (freeform answers)
   - key: charts.insufficient_data
     t: Insufficient Data
@@ -811,6 +857,8 @@ translations:
   - key: charts.axis_legends.interest_percentage
     t: Interest %
   - key: charts.axis_legends.satisfaction_percentage
+    t: Retention %
+  - key: charts.axis_legends.retention_percentage
     t: Retention %
   - key: charts.axis_legends.usage_percentage
     t: Usage %
@@ -898,19 +946,37 @@ translations:
     t: No Answer
 
   - key: charts.no_match
-    t: Other Answers
+    t: Unmatched Answers
   - key: charts.no_match.short
-    t: Other Answers
+    t: Unmatched Answers
+  - key: charts.no_match.description
+    t: Freeform answers that could not be matched to a specific datapoint
 
   - key: charts.cutoff_answers
-    t: Other Answers
+    t: Cutoff Answers
   - key: charts.cutoff_answers.short
-    t: Other Answers
+    t: Cutoff Answers
+  - key: charts.cutoff_answers.description
+    t: Answers that scored below the defined threshold
 
   - key: charts.other_answers
     t: Other Answers
   - key: charts.other_answers.short
     t: Other Answers
+  - key: charts.other_answers.description
+    t: Other answers not included above
+
+  - key: charts.overlimit_answers
+    t: Over Limit
+  - key: charts.overlimit_answers.short
+    t: Over Limit
+  - key: charts.overlimit_answers.description
+    t: Answers that were outside of the defined number of items requested
+
+  - key: charts.freeform_data
+    t: Freeform Data
+  - key: charts.freeform_data.description
+    t: Data gathered through a freeform text field
 
   - key: charts.tick.links
     t: Links
@@ -926,6 +992,18 @@ translations:
   - key: charts.average_clarification
     t: >
       Note that averages are calculated by taking the midpoint value of each range as an approximate representative value.
+
+  - key: charts.share
+    t: Share Chart…
+  - key: charts.export
+    t: Export Data…
+
+  - key: charts.mode
+    t: >
+      Mode:
+  - key: charts.view
+    t: >
+      View:
 
   ###########################################################################
   # Comments
@@ -943,6 +1021,13 @@ translations:
     t: Report this comment
   - key: comments.share
     t: Share Comment
+
+  - key: comments.filter.experience
+    t: "Experience: "
+  - key: comments.filter.sentiment
+    t: "Sentiment: "
+  - key: comments.filter.all
+    t: All
 
   ###########################################################################
   # Sharing
@@ -963,7 +1048,7 @@ translations:
   - key: share.site.body
     t: "Here are some interesting survey results: {link}"
   - key: share.block.twitter_text
-    t: "{hashtag} {year}: {title} {link}"
+    t: "{siteTitle}: {title}"
   - key: share.block.subject
     t: "{siteTitle} Survey Results"
   - key: share.block.body
@@ -1087,12 +1172,17 @@ translations:
   - key: award.tool_usage_delta_award.title
     t: Most Adopted Technology
   - key: award.tool_usage_delta_award.description
-    t: Awarded to the technology with the largest year-over-year “would use again” progression.
+    t: Awarded to the technology with the largest year-over-year usage progression.
+
+  - key: award.tool_retention_award.title
+    t: Highest Retention
+  - key: award.tool_retention_award.description
+    t: Awarded to the technology with the highest percentage of returning users.
 
   - key: award.tool_satisfaction_award.title
-    t: Highest Retention
+    aliasFor: award.tool_retention_award.title
   - key: award.tool_satisfaction_award.description
-    t: Awarded to the technology with the highest percentage of returning users.
+    aliasFor: award.tool_retention_award.description
 
   - key: award.tool_interest_award.title
     t: Highest Interest
@@ -1123,6 +1213,11 @@ translations:
     t: Most Commented Library
   - key: award.most_commented_tool_award.description
     t: Awarded to the library which received the most comments.
+
+  - key: award.most_loved_tool_award.title
+    t: Most Loved Library
+  - key: award.most_loved_tool_award.description
+    t: Awarded to the technology with the highest proportion of positive opinions.
 
   ###########################################################################
   # Hints
@@ -1477,26 +1572,44 @@ translations:
   - key: filters.compare_data
     t: Compare Data
   - key: filters.customize_chart
-    t: Customize Chart
+    t: Add Filters…
   - key: filters.docs
     t: Documentation
   - key: filters.compare_chart
     t: Customize “{chartName}”
+  - key: filters.edit_variant_with_name
+    t: Edit “{name}”
+  - key: filters.edit_name
+    t: "Edit Name"
+  - key: filters.edit_name.description
+    t: "Edit chart variant name:"
+  - key: filters.create_variant
+    t: Create New Variant
+  - key: filters.delete_variant
+    t: Delete Chart
+  - key: filters.delete_variant_confirm
+    t: Delete chart variant “{name}”?
+  - key: filters.edit_variant
+    t: Edit Options…
   - key: filters.filters.description
     t: |
-      Using a combination of demographics filters, you can define up to four **custom data series** to dynamically
-      load and compare them with the default data for this question.
+      Define a combination of filters to compare multiple versions of the same chart side-by-side
   - key: filters.facets.description
     t: |
-      Pick a variable to break down each bar into "facets".
+      Pick a variable and use it to further break down each row of a chart into segments.
   - key: filters.grid_mode
-    t: Side-by-Side
+    t: Filters
   - key: filters.combined_mode
     t: Combined
   - key: filters.facet_mode
     t: Facets
   - key: filters.facet
     t: "Facet:"
+
+  - key: filters.facet_view
+    t: Segmented bars
+  - key: filters.grid_view
+    t: Side-by-side grid
 
   - key: filters.series.heading
     t: Series {index}
@@ -1525,6 +1638,10 @@ translations:
     t: is one of
   - key: filters.operators.nin
     t: is not one of
+  - key: filters.operators.lt
+    t: is lower than
+  - key: filters.operators.gt
+    t: is greater than
   - key: filters.value.add
     t: Add Value
   - key: filters.value.delete
@@ -1570,6 +1687,12 @@ translations:
   - key: filters.facet.select
     t: Select a facet…
 
+  - key: filters.by_x
+    t: By {name}
+
+  - key: filters.vs_x
+    t: Vs. {name}
+
   - key: dataloader.failed_request
     t: >
       Oh no! The API request failed with the following message:
@@ -1579,3 +1702,129 @@ translations:
       fix it:
   - key: dataloader.submit_issue
     t: Submit Issue
+
+  # advanced options
+
+  - key: filters.advanced_options
+    t: Advanced Options
+
+  - key: filters.options.cutoff
+    t: Cutoff Threshold
+  - key: filters.options.cutoff.description
+    t: Exclude any value under this threshold from the data
+
+  - key: filters.options.limit
+    t: Limit
+  - key: filters.options.limit.description
+    t: Limit the results to the first n items
+
+  - key: filters.options.showDefaultSeries
+    aliasFor: filters.series.show_default
+  - key: filters.options.showDefaultSeries.description
+    t: Show the default (unfiltered) data series when using Grid mode
+
+  ###########################################################################
+  # Chart Controls
+  ###########################################################################
+
+  - key: charts.group_by
+    t: >
+      Group by:
+  - key: charts.group.experience
+    t: Experience
+  - key: charts.group.sentiment
+    t: Sentiment
+
+  - key: charts.display_mode
+    t: >
+      Display mode:
+  - key: charts.display_mode.split
+    t: Split View
+  - key: charts.display_mode.stacked
+    t: Stacked View
+
+  - key: charts.order
+    t: >
+      Sort order:
+
+  - key: charts.sort_by
+    t: >
+      Sort by:
+  - key: charts.sort_by_sort
+    t: >
+      Sort by "**{sort}**""
+  - key: charts.sorted_by_sort_order
+    t: >
+      Sorted by "**{sort}**"", **{order}**
+  - key: charts.order.asc
+    t: Ascending
+  - key: charts.order.desc
+    t: Descending
+
+  - key: charts.actions.customize
+    aliasFor: filters.customize_chart
+  - key: charts.actions.data
+    t: Get Chart Data
+  - key: charts.actions.share
+    t: Share Chart
+
+  - key: charts.vs
+    t: vs.
+
+  - key: charts.custom_variant
+    t: Variant {index}
+  - key: charts.new_variant_name_prompt
+    t: Enter a short descriptive name for your new chart (e.g. “vs. Income”, “by Gender”, etc.)
+
+  - key: charts.show_all_rows
+    t: Show All
+  - key: charts.show_all_rows.x_hidden
+    t: Show All ({count} hidden)
+
+  - key: charts.metadata.completion
+    t: >
+      **{value}** completion rate (out of {total} survey participants)
+  - key: charts.metadata.respondents
+    t: >
+      **{value}** question respondents
+  - key: charts.metadata.average
+    t: >
+      **{value}** mean (average) value
+  - key: charts.metadata.median
+    t: >
+      **{value}** median value
+
+  ###########################################################################
+  # Multi Items Experience Chart
+  ###########################################################################
+
+  - key: charts.multiexp.cell_group_tooltip.experience
+    t: >
+      **{value}%** of respondents answered "**{answer}**"
+
+  - key: charts.multiexp.cell_group_tooltip.sentiment
+    t: >
+      **{value}%** of respondents had a **{answer}** sentiment
+
+  - key: charts.multiexp.cell_tooltip
+    t: >
+      **{value}%** of respondents answered "**{experience}**" and had a **{sentiment}** sentiment
+
+  - key: charts.multiexp.cell_tooltip_neutral
+    t: >
+      **{value}%** of respondents answered "**{experience}**" and did not pick any sentiment
+
+  ###########################################################################
+  # Raw Freeform Answers
+  ###########################################################################
+
+  - key: answers.answers
+    t: Freeform Answers
+  - key: answers.answers_for
+    t: Answers matching “{name}”
+  - key: answers.description
+    t: |
+      These freeform answers were matched to the **{name}** keyword through a combination of
+      automated and manual data processing.
+  - key: answers.report_abuse
+    t: Report this answer
