--- a/state_of_html.yml
+++ b/state_of_html.yml
@@ -6,84 +6,83 @@ translations:
   ###########################################################################
   # Intro for stateofhtml.com
   - key: general.state_of_html.intro
-    # aliasFor: general.html2023.survey_intro # Can we do that?
     t: |
-      While web developers tend to focus on JavaScript and CSS, none of what we do would be possible without HTML acting as the foundation.
+      ในขณะที่นักพัฒนาเว็บส่วนใหญ่มักจะเน้นที่ JavaScript และ CSS แต่สิ่งที่เราทำทั้งหมดนี้จะเป็นไปไม่ได้เลยหากไม่มี HTML เป็นพื้นฐาน
 
-      It has long seemed like HTML wasn't evolving, but things may be changing.
-      New elements like `<selectlist>` are on the horizon, cool new features like popovers,
-      and a swath of related browser APIs (Web Components, PWAs, etc.).
+      นานแล้วที่ดูเหมือนว่า HTML จะไม่มีการพัฒนา แต่สิ่งต่างๆกำลังเปลี่ยนไป
+      มี Element ใหม่ๆเช่น `<selectlist>` ที่กำลังจะมา ฟีเจอร์ใหม่สุดเจ๋งเช่น popovers
+      และ API เบราว์เซอร์ที่เกี่ยวข้องจำนวนมาก (Web Components, PWAs ฯลฯ)
 
-      This year, [Lea Verou](https://lea.verou.me/) took on the formidable task of leading the design of this brand new survey, from content to UX and beyond.
+      ปีนี้ [Lea Verou](https://lea.verou.me/) ได้เข้ามารับภารกิจที่ท้าทายในการนำการออกแบบแบบสำรวจใหม่เอี่ยมนี้ ตั้งแต่เนื้อหาไปจนถึง UX และอื่นๆ
 
-      Building on the success of [State of JS](http://stateofjs.com/) and [State of CSS](https://stateofcss.com/), we introduce **State of HTML**;
-      the last missing piece that completes the trilogy, so we can track the evolution of the web platform as a whole.
+      สร้างต่อจากความสำเร็จของ [State of JS](http://stateofjs.com/) และ [State of CSS](https://stateofcss.com/) เราขอนำเสนอ **State of HTML**;
+      แบบสำรวจชิ้นสุดท้ายที่ทำให้ไตรภาคสมบูรณ์ เพื่อที่เราจะสามารถติดตามวิวัฒนาการของแพลตฟอร์มเว็บในภาพรวม
 
-      Benefits to you:
-      - Survey results are **used by browsers** and standards groups **for roadmap prioritization**.
-      Your responses can help get features you care about implemented, browser incompatibilities being prioritized, and gaps in the platform being addressed.
-      - Learn about new and upcoming features; add features to your reading list and get a list of resources at the end!
-      - Get a personalized knowledge score and see how you compare to other respondents
+      คุณได้อะไรบ้าง:
+      - ผลการสำรวจจะ**ถูกใช้โดยเบราว์เซอร์**และกลุ่มส่วนกลาง**สำหรับการจัดลำดับความสำคัญของโรดแมป**
+      คำตอบของคุณสามารถช่วยให้ฟีเจอร์ที่คุณสนใจได้รับการดำเนินการ ความไม่เข้ากันของเบราว์เซอร์ได้รับการแก้ไข และช่องว่างในแพลตฟอร์มได้รับการแก้ไข
+      - เรียนรู้เกี่ยวกับฟีเจอร์ใหม่และที่จะมาในอนาคต เพิ่มฟีเจอร์ไว้อ่านทีหลัง และรับแหล่งข้อมูลเมื่อเสร็จสิ้น!
+      - รับคะแนนความรู้ส่วนตัวและเปรียบเทียบมันกับผู้เข้าร่วมคนอื่น
 
-      The survey will be open for 3 weeks, but responses entered **within the first 9 days (until October 1st)** will have a much higher impact on the Web,
-      as preliminary data will be used for certain prioritization efforts that have deadlines before then.
+      แบบสำรวจจะเปิดเป็นเวลา 3 สัปดาห์ แต่คำตอบที่ป้อน**ภายใน 9 วันแรก (จนถึง 1 ตุลาคม)**จะมีผลกระทบมากขึ้นบนแพลตฟอร์มเว็บ
+      เนื่องจากข้อมูลเบื้องต้นจะถูกใช้เพื่อการจัดลำดับความสำคัญที่มีเส้นตายก่อนเวลานั้น
 
   - key: general.state_of_html.description
-    t: The annual developer survey about the web platform
+    t: แบบสำรวจนักพัฒนาซอฟแวร์ประจำปีเกี่ยวกับแพลตฟอร์มเว็บ
 
   ###########################################################################
   # Sections
   ###########################################################################
 
   - key: sections.forms.title
-    t: Forms
+    t: ฟอร์ม
   - key: sections.forms.description
-    t: Form-related elements and attributes
+    t: Elements and attributes ที่เกี่ยวกับฟอร์ม
 
   - key: sections.interactivity.title
-    t: Interactivity
+    t: Interactivity (การโต้ตอบ/ปฏิสัมพันธ์)
   - key: sections.interactivity.description
-    t: APIs that enable richer user interactions.
+    t: API ที่ช่วยให้เกิด Interactivity ที่สมบูรณ์ยิ่งขึ้น
 
   - key: sections.web_components.title
     t: Web Components
   - key: sections.web_components.description
-    t: Making & using web components.
+    t: การสร้างและการใช้ Web Components
 
   - key: sections.content.title
-    t: Content
+    t: เนื้อหา
   - key: sections.content.description
-    t: Embedding, multimedia, data, and other content-related features.
+    t: การฝังมัลติมีเดีย ข้อมูล และฟีเจอร์ที่เกี่ยวข้องกับเนื้อหาอื่นๆ
 
   - key: sections.external_content.title
-    t: External Content
+    t: เนื้อหาภายนอก
   - key: sections.external_content.description
-    t: Embedding external resources, and other multimedia APIs.
+    t: การฝังทรัพยากรภายนอก และ API มัลติมีเดียอื่นๆ
 
   - key: sections.accessibility.title
-    t: Accessibility
+    t: การเข้าถึง
   - key: sections.accessibility.description
-    t: Making sites and apps accessible by all.
+    t: การทำให้เว็บไซต์และแอปเข้าถึงได้สำหรับทุกคน
 
   - key: sections.mobile_web_apps.title
-    t: Native-like Web Apps
+    t: แอปเว็บที่คล้ายกับ Native
   - key: sections.mobile_web_apps.description
-    t: Authoring mobile and desktop-optimized web apps.
+    t: การพัฒนาเว็บแอปที่ปรับให้เหมาะสมกับมือถือและเดสก์ท็อป
 
   - key: sections.other_features.title
-    t: Other Features
+    t: ฟีเจอร์อื่นๆ
   - key: sections.other_features.description
-    t: Other HTML elements & browser APIs.
+    t: Element HTML อื่นๆและ API เบราว์เซอร์อื่นๆ
 
   - key: sections.other_tools.title
-    t: Other Tools
+    t: เครื่องมืออื่นๆ
   - key: sections.other_tools.description
-    t: Other tools you use as part of your work.
+    t: เครื่องมืออื่นๆที่คุณใช้เป็นส่วนหนึ่งของงานของคุณ
 
   - key: sections.usage.title
-    t: Usage
+    t: การใช้งาน
   - key: sections.usage.description
-    t: How you use HTML.
+    t: วิธีการที่คุณใช้ HTML
 
   ###########################################################################
   # Features
@@ -92,33 +91,33 @@ translations:
   # forms
 
   - key: features.form_controls
-    t: Form Controls
+    t: การควบคุมฟอร์ม
   - key: features.form_controls.question
-    t: Which form controls have you used?
+    t: คุณเคยใช้การควบคุมฟอร์มแบบใดบ้าง?
 
   - key: features.form_input_types
-    t: Input Types
+    t: ประเภท Input
   - key: features.form_input_types.question
-    t: Which input types have you used?
+    t: คุณเคยใช้ประเภท Input ใดบ้าง?
   - key: options.form_input_types.na
-    t: <span aria-hidden="true">🚫</span> None of the above
+    t: <span aria-hidden="true">🚫</span> ไม่มีเลย
 
   - key: features.form_validation_features
-    t: Form Validation
+    t: การตรวจสอบฟอร์ม (Form Validation)
   - key: features.form_validation_features.question
-    t: Which of the following form validation features have you used?
+    t: คุณเคยใช้ฟีเจอร์การตรวจสอบฟอร์มใดบ้าง?
   - key: options.form_validation_features.na
-    t: <span aria-hidden="true">🚫</span> None of the above
+    t: <span aria-hidden="true">🚫</span> ไม่มีเลย
 
   - key: features.forms_pain_points
-    t: Form Pain Points
+    t: Pain Point ของฟอร์ม
   - key: features.forms_pain_points.question
-    t: What are your pain points around HTML forms?
+    t: Pain Point ของคุณที่มี่ต่อฟอร์ม HTML มีอะไรบ้าง?
   - key: features.forms_pain_points.prompt
     t: |
-      Think of the various form controls (e.g. `<input>`, `<textarea>`, `<select>`, `<button>` etc.),
-      behaviors (e.g. validation, autocomplete), handling forms via JS, editing APIs (e.g. `contentEditable`) etc.
-      Anything that bothers you is fair game — browser support, missing features, styling, etc.
+      นึกถึงการควบคุมฟอร์มต่างๆ (เช่น `<input>`, `<textarea>`, `<select>`, `<button>` ฯลฯ),
+      พฤติกรรม (เช่น การตรวจสอบ การเติมข้อมูลอัตโนมัติ), การจัดการฟอร์มด้วย JS, การใช้ API สำหรับแก้ไข (เช่น `contentEditable`) ฯลฯ
+      อะไรก็ตามที่กวนใจคุณถือว่าเป็นประเด็น ไม่ว่าการสนับสนุนเบราว์เซอร์ ฟีเจอร์ที่ขาดหาย การจัดสไตล์ ฯลฯ
   - key: features.forms_pain_points.placeholder
     t: |
       Pain point #{index}…
@@ -126,22 +125,22 @@ translations:
   # interactivity
 
   - key: features.dom_attribute_features
-    t: DOM Attribute-related methods
+    t: Method ที่เกี่ยวกับ DOM Attribute
   - key: features.dom_attribute_features.question
-    t: Which of the following DOM attribute-related methods have you used?
+    t: คุณเคยใช้ method ที่เกี่ยวกับ DOM Attribute ใดบ้าง?
 
   - key: features.dom_html_features
-    t: HTML String-handling Features
+    t: ฟีเจอร์การจัดการ String ของ HTML
   - key: features.dom_html_features.question
-    t: Which of the following DOM HTML string-handling features have you used?
+    t: คุณเคยใช้ฟีเจอร์การจัดการ String ของ HTML ใดบ้าง?
 
   - key: features.dom_methods
-    t: Element reparenting DOM Methods
+    t: วิธีการ Reparent DOM Element
 
   - key: features.dom_moving_element_features
-    t: Element-moving DOM Methods
+    t: วิธีการย้าย Element ใน DOM
   - key: features.dom_moving_element_features.question
-    t: Which of the following element-moving DOM methods have you used?
+    t: คุณเคยใช้วิธีการย้าย Element ใน DOM อะไรบ้าง?
   # - key: options.dom_methods.element_innerhtml.description
   #   t: |
   #     `element.innerHTML = rawHTML`
@@ -179,17 +178,16 @@ translations:
   #   t: |
   #     `let fragment = document.createDocumentFragment()`
   - key: options.dom_methods.na
-    t: <span aria-hidden="true">🚫</span> None of the above
+    t: <span aria-hidden="true">🚫</span> ไม่มีเลย
 
   - key: features.interactivity_pain_points
-    t: Interactivity Pain Points
+    t: Pain Point ของ Interactivity
   - key: features.interactivity_pain_points.question
-    t: What are your pain points around dynamic HTML changes?
+    t: Pain Point ของคุณเกี่ยวกับการเปลี่ยนแปลง HTML แบบไดนามิกมีอะไรบ้าง?
   - key: features.interactivity_pain_points.prompt
     t: |
-      Browser incompatibilities or lack of support, missing features, and other problems you face
-      around interactive elements and behaviors (except forms), DOM manipulation, events, and related APIs.
-
+      ปัญหาการเข้ากันได้ของเบราว์เซอร์หรือการขาดการสนับสนุน, ฟีเจอร์ที่ขาดหาย, และปัญหาอื่นๆที่คุณเผชิญ
+      เกี่ยวกับ Element และความ Interactive (ยกเว้นฟอร์ม), การจัดการ DOM, events และ API ที่เกี่ยวข้อง
   - key: features.interactivity_pain_points.placeholder
     t: |
       Pain point #{index}…
@@ -197,26 +195,26 @@ translations:
   - key: features.interactivity_techniques
     t: Interactivity Methods
   - key: features.interactivity_techniques.question
-    t: Which of these methods have you used to add interactivity or dynamically modify HTML?
+    t: คุณเคยใช้วิธีใดในการเพิ่มความ Interactive หรือแก้ไข HTML แบบไดนามิก?
   - key: options.interactivity_techniques.css_for_interactivity
-    t: CSS for interactivity (toggles, tabs, etc.)
+    t: CSS สำหรับความ Interactive (การสลับ แท็บ ฯลฯ)
   - key: options.interactivity_techniques.js_dom_libraries
-    t: JavaScript DOM libraries (jQuery, etc.)
+    t: ไลบรารี DOM ของ JavaScript (เช่น jQuery)
   - key: options.interactivity_techniques.js_framework
-    t: JavaScript frameworks (React, Vue, etc.)
+    t: เฟรมเวิร์ก JavaScript (React, Vue ฯลฯ)
   - key: options.interactivity_techniques.vanilla_js
-    t: Plain JavaScript (no frameworks or libraries)
+    t: Plain JavaScript (ไม่ใช้เฟรมเวิร์กหรือไลบรารี)
   - key: options.interactivity_techniques.web_components
     t: Web Components
   - key: options.interactivity_techniques.na
-    t: <span aria-hidden="true">🚫</span> None of the above
+    t: <span aria-hidden="true">🚫</span> ไม่มีเลย
 
   # content
 
   - key: features.machine_readable_features
-    t: Machine-Readable Data
+    t: ข้อมูลที่เครื่องสามารถอ่านได้
   - key: features.machine_readable_features.question
-    t: Which of the following have you used to include machine-readable data in HTML?
+    t: วิธีใดบ้างข้างต้นที่คุณเคยใช้ในการใส่ข้อมูลที่เครื่องอ่านได้เข้าใน HTML?
   - key: options.machine_readable_features.rdfa.description
     t: |
       `property`, `typeof`, etc.
@@ -228,24 +226,24 @@ translations:
       `itemprop`, `itemscope`, etc.
 
   - key: features.multiple_languages_support
-    t: Multiple-Language Support
+    t: การรองรับหลายภาษา
   - key: features.multiple_languages_support.question
-    t: How often do you work on projects that require supporting more than one language?
+    t: คุณทำงานในโปรเจกต์ที่ต้องรองรับมากกว่าหนึ่งภาษาบ่อยแค่ไหน?
   - key: options.multiple_languages_support.never
-    t: Never
+    t: ไม่เคย
   - key: options.multiple_languages_support.infrequently
-    t: Infrequently (less than once a year)
+    t: นานๆครั้ง (น้อยกว่าหนึ่งครั้งต่อปี)
   - key: options.multiple_languages_support.frequently
-    t: Frequently (more than once a year)
+    t: บ่อย (มากกว่าหนึ่งครั้งต่อปี)
   - key: options.multiple_languages_support.all_the_time
-    t: All the time
+    t: ตลอดเวลา
 
   - key: features.i18n_features
-    t: Internationalization Features
+    t: ฟีเจอร์การแปลภาษา
   - key: features.i18n_features.question
-    t: Which of the following internationalization features have you used?
+    t: คุณเคยใช้ฟีเจอร์การแปลภาษาใดบ้าง?
   - key: options.i18n_features.na
-    t: <span aria-hidden="true">🚫</span> None of the above
+    t: <span aria-hidden="true">🚫</span> ไม่มีที่กล่าวมา
 
   # - key: options.i18n_features.intl_datetimeformat.description
   #   t:
@@ -267,13 +265,13 @@ translations:
   #   t:
 
   - key: features.content_pain_points
-    t: Content Pain Points
+    t: Pain Point ของเนื้อหา
   - key: features.content_pain_points.question
-    t: What are your pain points around managing content in HTML?
+    t: Pain Point ของคุณเกี่ยวกับการจัดการเนื้อหาใน HTML คืออะไรบ้าง?
   - key: features.content_pain_points.prompt
     t: |
-      Think of embedding (multimedia, iframes, SVG, etc), machine-readable data, internationalization & localization, security & privacy, performance etc.
-      Missing features, browser incompatibilities, and other problems you face are all fair game.
+      นึกถึงการฝัง (มัลติมีเดีย iframes SVG ฯลฯ), ข้อมูลที่เครื่องอ่านได้, การแปลและปรับภาษาให้เข้ากับท้องถิ่น, ความปลอดภัยและความเป็นส่วนตัว, ประสิทธิภาพ ฯลฯ
+      ฟีเจอร์ที่ขาดหาย การเข้ากันไม่ได้ของเบราว์เซอร์ และปัญหาอื่นๆที่คุณเผชิญทั้งหมดถือว่าเป็นประเด็นได้
   - key: features.content_pain_points.placeholder
     t: |
       Pain point #{index}…
@@ -281,26 +279,26 @@ translations:
   # Content
 
   - key: features.external_content_elements
-    t: External Content Elements
+    t: Element เนื้อหาภายนอก
   - key: features.external_content_elements.question
-    t: Which of the following elements have you used?
+    t: คุณเคยใช้ Element ใดบ้างในรายการต่อไปนี้?
   - key: options.external_content_elements.na
-    t: <span aria-hidden="true">🚫</span> None of the above
+    t: <span aria-hidden="true">🚫</span> ไม่มีเลย
 
   - key: features.privacy_security_features
     t: |
-      Security & Privacy Features
+      ฟีเจอร์ความปลอดภัยและความเป็นส่วนตัว
   - key: features.privacy_security_features.question
     t: |
-      Which of the following security & privacy features have you used?
+      คุณเคยใช้ฟีเจอร์ความปลอดภัยและความเป็นส่วนตัวใดบ้างในรายการต่อไปนี้?
   - key: options.privacy_security_features.na
-    t: <span aria-hidden="true">🚫</span> None of the above
+    t: <span aria-hidden="true">🚫</span> ไม่มีเลย
 
   - key: features.rel_attribute
-    t: Resource Hints
+    t: คำแนะนำแหล่งข้อมูล
   - key: features.rel_attribute.question
     t: |
-      Which of these values have you used for the `rel` attribute of `<link>` ?
+      คุณเคยใช้ค่าใดบ้างสำหรับ Attribute `rel` ของ `<link>` ?
 
   # - key: features.external_content_pain_points
   #   t: External Content Pain Points
@@ -316,40 +314,40 @@ translations:
   # Web Components
 
   - key: features.web_components_libraries
-    t: Web Components Libraries
+    t: ไลบรารี Web Components
   - key: features.web_components_libraries.question
-    t: Have you used any Web Components libraries?
+    t: คุณเคยใช้ไลบรารี Web Components ใดบ้าง?
 
   - key: features.web_components_features
-    t: Other Web Component Features
+    t: ฟีเจอร์ Web Component อื่นๆ
   - key: features.web_components_features.question
-    t: Which of the following web component features have you used?
+    t: คุณเคยใช้ฟีเจอร์ใดบ้างในรายการต่อไปนี้สำหรับ Web Components?
   - key: options.web_components_features.host_pseudos.description
     t: |
-      `:host` , `:host()` , `:host-context()`
+      `:host`, `:host()`, `:host-context()`
   - key: options.web_components_features.is_attribute.description
     t: |
       `<button is="fancy-button">`
   - key: options.web_components_features.na
-    t: <span aria-hidden="true">🚫</span> None of the above
+    t: <span aria-hidden="true">🚫</span> ไม่มีเลย
 
   - key: features.using_web_components_pain_points
-    t: Using Web Components Pain Points
+    t: Pain Point ในการใช้ Web Components
   - key: features.using_web_components_pain_points.question
-    t: What are your biggest pain points around *consuming* web components?
+    t: Pain Point ที่ใหญ่ที่สุดของคุณในการใช้ Web Components มีอะไรบ้าง?
   - key: features.using_web_components_pain_points.prompt
-    t: Using Web Components that you or others have made. Missing features, browser incompatibilities, etc.
+    t: การใช้ Web Components ที่คุณหรือผู้อื่นสร้างขึ้น, ฟีเจอร์ที่ขาดหาย, ความไม่เข้ากันของเบราว์เซอร์ ฯลฯ
   - key: features.using_web_components_pain_points.placeholder
     t: |
       Pain point #{index}…
 
   - key: features.making_web_components_pain_points
-    t: Making Web Components Pain Points
+    t: Pain Point ในการสร้าง Web Components
   - key: features.making_web_components_pain_points.question
-    t: What are your biggest pain points around *making* web components?
+    t: Pain Point ที่ใหญ่ที่สุดของคุณในการสร้าง Web Components มีอะไรบ้าง?
   - key: features.making_web_components_pain_points.prompt
     t: |
-      What prevents you from creating the amazing components you envision? Missing features, browser incompatibilities, etc.
+      อะไรที่ขัดขวางไม่ให้คุณสร้าง Element ที่สุดแสนจะน่าทึ่งที่คุณจินตนาการไว้? ฟีเจอร์ที่ขาดหาย ความไม่เข้ากันของเบราว์เซอร์ ฯลฯ
   - key: features.making_web_components_pain_points.placeholder
     t: |
       Pain point #{index}…
